# zkeyboard

./: .gitignore  CMakeLists.txt  debug.conf  notes.md  west.yml  zephyr.diff
app/: CMakeLists.txt  Kconfig  debug.conf  prj.conf
app/inc/: kb_leds.h  usb_kscan.h
app/src/: kb_leds.c  main.c  usb_kscan.c
boards/arm/leftmk_l1/: Kconfig.board  Kconfig.defconfig  leftmk_l1-pinctrl.dtsi  leftmk_l1.dts  leftmk_l1_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/kscan/: CMakeLists.txt  Kconfig  kscan_gpio.c  kscan_uart.c
dts/bindings/kscan/: zephyr,gpio-kscan.yaml  zephyr,uart-kscan.yaml
include/drivers/: kscan_gpio.h  kscan_uart.h
